adiciona readme e renomeia notebooks

--- a/notebooks/00_bronze_ingestao.ipynb
+++ b/notebooks/00_bronze_ingestao.ipynb
@@ -189,7 +189,15 @@
     "         .option(\"header\", True)\n",
     "         .option(\"inferSchema\", True)\n",
     "         .csv(f\"{raw_base_path}/Exchange_Rates.csv\")\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "# Leitura do CSV de clientes\n",
+    "df_customers = (\n",
+    "    spark.read\n",
+    "         .option(\"header\", True)\n",
+    "         .option(\"inferSchema\", True)\n",
+    "         .csv(f\"{raw_base_path}/Customers.csv\")\n",
+    ")"
    ]
   },
   {
@@ -232,7 +240,8 @@
     "df_sales = clean_column_names(df_sales)\n",
     "df_products = clean_column_names(df_products)\n",
     "df_stores = clean_column_names(df_stores)\n",
-    "df_exchange = clean_column_names(df_exchange)"
+    "df_exchange = clean_column_names(df_exchange)\n",
+    "df_customers = clean_column_names(df_customers)"
    ]
   },
   {
@@ -275,7 +284,8 @@
     "df_sales.write.format(\"delta\").mode(write_mode).save(f\"{bronze_base_path}/sales\")\n",
     "df_products.write.format(\"delta\").mode(write_mode).save(f\"{bronze_base_path}/products\")\n",
     "df_stores.write.format(\"delta\").mode(write_mode).save(f\"{bronze_base_path}/stores\")\n",
-    "df_exchange.write.format(\"delta\").mode(write_mode).save(f\"{bronze_base_path}/exchange_rates\")"
+    "df_exchange.write.format(\"delta\").mode(write_mode).save(f\"{bronze_base_path}/exchange_rates\")\n",
+    "df_customers.write.format(\"delta\").mode(write_mode).save(f\"{bronze_base_path}/customers\")"
    ]
   },
   {
@@ -389,7 +399,11 @@
     "\n",
     "CREATE TABLE IF NOT EXISTS exchange_rates_bronze\n",
     "USING DELTA\n",
-    "LOCATION '/FileStore/bronze/exchange_rates';"
+    "LOCATION '/FileStore/bronze/exchange_rates';\n",
+    "\n",
+    "CREATE TABLE IF NOT EXISTS bronze.customers_bronze\n",
+    "USING DELTA\n",
+    "LOCATION '/FileStore/bronze/customers';"
    ]
   },
   {
@@ -51451,10 +51465,203 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "66f2dbb4-f712-445c-88dd-b03b8a6cb8c1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<style scoped>\n",
+       "  .table-result-container {\n",
+       "    max-height: 300px;\n",
+       "    overflow: auto;\n",
+       "  }\n",
+       "  table, th, td {\n",
+       "    border: 1px solid black;\n",
+       "    border-collapse: collapse;\n",
+       "  }\n",
+       "  th, td {\n",
+       "    padding: 5px;\n",
+       "  }\n",
+       "  th {\n",
+       "    text-align: left;\n",
+       "  }\n",
+       "</style><div class='table-result-container'><table class='table-result'><thead style='background-color: white'><tr><th>customerkey</th><th>gender</th><th>name</th><th>city</th><th>state_code</th><th>state</th><th>zip_code</th><th>country</th><th>continent</th><th>birthday</th></tr></thead><tbody><tr><td>301</td><td>Female</td><td>Lilly Harding</td><td>WANDEARAH EAST</td><td>SA</td><td>South Australia</td><td>5523</td><td>Australia</td><td>Australia</td><td>1939-07-03</td></tr><tr><td>325</td><td>Female</td><td>Madison Hull</td><td>MOUNT BUDD</td><td>WA</td><td>Western Australia</td><td>6522</td><td>Australia</td><td>Australia</td><td>1979-09-27</td></tr><tr><td>554</td><td>Female</td><td>Claire Ferres</td><td>WINJALLOK</td><td>VIC</td><td>Victoria</td><td>3380</td><td>Australia</td><td>Australia</td><td>1947-05-26</td></tr><tr><td>786</td><td>Male</td><td>Jai Poltpalingada</td><td>MIDDLE RIVER</td><td>SA</td><td>South Australia</td><td>5223</td><td>Australia</td><td>Australia</td><td>1957-09-17</td></tr><tr><td>1042</td><td>Male</td><td>Aidan Pankhurst</td><td>TAWONGA SOUTH</td><td>VIC</td><td>Victoria</td><td>3698</td><td>Australia</td><td>Australia</td><td>1965-11-19</td></tr></tbody></table></div>"
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1+output": {
+       "addedWidgets": {},
+       "aggData": [],
+       "aggError": "",
+       "aggOverflow": false,
+       "aggSchema": [],
+       "aggSeriesLimitReached": false,
+       "aggType": "",
+       "arguments": {},
+       "columnCustomDisplayInfos": {},
+       "data": [
+        [
+         301,
+         "Female",
+         "Lilly Harding",
+         "WANDEARAH EAST",
+         "SA",
+         "South Australia",
+         "5523",
+         "Australia",
+         "Australia",
+         "1939-07-03"
+        ],
+        [
+         325,
+         "Female",
+         "Madison Hull",
+         "MOUNT BUDD",
+         "WA",
+         "Western Australia",
+         "6522",
+         "Australia",
+         "Australia",
+         "1979-09-27"
+        ],
+        [
+         554,
+         "Female",
+         "Claire Ferres",
+         "WINJALLOK",
+         "VIC",
+         "Victoria",
+         "3380",
+         "Australia",
+         "Australia",
+         "1947-05-26"
+        ],
+        [
+         786,
+         "Male",
+         "Jai Poltpalingada",
+         "MIDDLE RIVER",
+         "SA",
+         "South Australia",
+         "5223",
+         "Australia",
+         "Australia",
+         "1957-09-17"
+        ],
+        [
+         1042,
+         "Male",
+         "Aidan Pankhurst",
+         "TAWONGA SOUTH",
+         "VIC",
+         "Victoria",
+         "3698",
+         "Australia",
+         "Australia",
+         "1965-11-19"
+        ]
+       ],
+       "datasetInfos": [],
+       "dbfsResultPath": null,
+       "isJsonSchema": true,
+       "metadata": {},
+       "overflow": false,
+       "plotOptions": {
+        "customPlotOptions": {},
+        "displayType": "table",
+        "pivotAggregation": null,
+        "pivotColumns": null,
+        "xColumns": null,
+        "yColumns": null
+       },
+       "removedWidgets": [],
+       "schema": [
+        {
+         "metadata": "{}",
+         "name": "customerkey",
+         "type": "\"integer\""
+        },
+        {
+         "metadata": "{}",
+         "name": "gender",
+         "type": "\"string\""
+        },
+        {
+         "metadata": "{}",
+         "name": "name",
+         "type": "\"string\""
+        },
+        {
+         "metadata": "{}",
+         "name": "city",
+         "type": "\"string\""
+        },
+        {
+         "metadata": "{}",
+         "name": "state_code",
+         "type": "\"string\""
+        },
+        {
+         "metadata": "{}",
+         "name": "state",
+         "type": "\"string\""
+        },
+        {
+         "metadata": "{}",
+         "name": "zip_code",
+         "type": "\"string\""
+        },
+        {
+         "metadata": "{}",
+         "name": "country",
+         "type": "\"string\""
+        },
+        {
+         "metadata": "{}",
+         "name": "continent",
+         "type": "\"string\""
+        },
+        {
+         "metadata": "{\"__detected_date_formats\":\"M/d/yyyy\"}",
+         "name": "birthday",
+         "type": "\"date\""
+        }
+       ],
+       "type": "table"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%sql\n",
+    "SELECT * FROM bronze.customers_bronze LIMIT 5;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "92aad008-66d8-48fa-bfbb-c6dd7e330f61",
      "showTitle": false,
@@ -51483,7 +51690,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 3571773272081819,
+     "commandId": 2599862586179784,
      "dataframes": [
       "_sqldf"
      ]
