--- a/notebooks/01_silver_transformacoes.ipynb
+++ b/notebooks/01_silver_transformacoes.ipynb
@@ -74,9 +74,9 @@
     "spark = SparkSession.builder.getOrCreate()\n",
     "\n",
     "# Definir nomes de banco e caminho no DBFS\n",
-    "bronze_db   = \"bronze\"\n",
     "silver_db   = \"silver\"\n",
-    "silver_path = \"/FileStore/silver/sales_silver\""
+    "silver_path = \"/FileStore/silver/sales_silver\"\n",
+    "bronze_path = \"/FileStore/bronze\""
    ]
   },
   {
@@ -119,11 +119,12 @@
    },
    "outputs": [],
    "source": [
-    "# Carregar dados Bronze via catálogo\n",
-    "sales    = spark.table(f\"{bronze_db}.sales_bronze\")\n",
-    "products = spark.table(f\"{bronze_db}.products_bronze\")\n",
-    "stores   = spark.table(f\"{bronze_db}.stores_bronze\")\n",
-    "exchange = spark.table(f\"{bronze_db}.exchange_rates_bronze\")"
+    "# Caminhos diretos para os arquivos Delta na Bronze\n",
+    "sales     = spark.read.format(\"delta\").load(f\"{bronze_path}/sales\")\n",
+    "products  = spark.read.format(\"delta\").load(f\"{bronze_path}/products\")\n",
+    "stores    = spark.read.format(\"delta\").load(f\"{bronze_path}/stores\")\n",
+    "exchange  = spark.read.format(\"delta\").load(f\"{bronze_path}/exchange_rates\")\n",
+    "customers = spark.read.format(\"delta\").load(f\"{bronze_path}/customers\")"
    ]
   },
   {
@@ -169,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root\n |-- order_number: integer (nullable = true)\n |-- line_item: integer (nullable = true)\n |-- order_date: date (nullable = true)\n |-- delivery_date: date (nullable = true)\n |-- customerkey: integer (nullable = true)\n |-- storekey: integer (nullable = true)\n |-- productkey: integer (nullable = true)\n |-- quantity: integer (nullable = true)\n |-- currency_code: string (nullable = true)\n\nroot\n |-- productkey: integer (nullable = true)\n |-- product_name: string (nullable = true)\n |-- brand: string (nullable = true)\n |-- color: string (nullable = true)\n |-- unit_cost_usd: string (nullable = true)\n |-- unit_price_usd: string (nullable = true)\n |-- subcategorykey: integer (nullable = true)\n |-- subcategory: string (nullable = true)\n |-- categorykey: integer (nullable = true)\n |-- category: string (nullable = true)\n\nroot\n |-- storekey: integer (nullable = true)\n |-- country: string (nullable = true)\n |-- state: string (nullable = true)\n |-- square_meters: integer (nullable = true)\n |-- open_date: date (nullable = true)\n\nroot\n |-- date: date (nullable = true)\n |-- currency: string (nullable = true)\n |-- exchange: double (nullable = true)\n\n"
+      "root\n |-- order_number: integer (nullable = true)\n |-- line_item: integer (nullable = true)\n |-- order_date: date (nullable = true)\n |-- delivery_date: date (nullable = true)\n |-- customerkey: integer (nullable = true)\n |-- storekey: integer (nullable = true)\n |-- productkey: integer (nullable = true)\n |-- quantity: integer (nullable = true)\n |-- currency_code: string (nullable = true)\n\nroot\n |-- productkey: integer (nullable = true)\n |-- product_name: string (nullable = true)\n |-- brand: string (nullable = true)\n |-- color: string (nullable = true)\n |-- unit_cost_usd: string (nullable = true)\n |-- unit_price_usd: string (nullable = true)\n |-- subcategorykey: integer (nullable = true)\n |-- subcategory: string (nullable = true)\n |-- categorykey: integer (nullable = true)\n |-- category: string (nullable = true)\n\nroot\n |-- storekey: integer (nullable = true)\n |-- country: string (nullable = true)\n |-- state: string (nullable = true)\n |-- square_meters: integer (nullable = true)\n |-- open_date: date (nullable = true)\n\nroot\n |-- date: date (nullable = true)\n |-- currency: string (nullable = true)\n |-- exchange: double (nullable = true)\n\nroot\n |-- customerkey: integer (nullable = true)\n |-- gender: string (nullable = true)\n |-- name: string (nullable = true)\n |-- city: string (nullable = true)\n |-- state_code: string (nullable = true)\n |-- state: string (nullable = true)\n |-- zip_code: string (nullable = true)\n |-- country: string (nullable = true)\n |-- continent: string (nullable = true)\n |-- birthday: date (nullable = true)\n\n"
      ]
     }
    ],
@@ -178,7 +179,8 @@
     "sales.printSchema()\n",
     "products.printSchema()\n",
     "stores.printSchema()\n",
-    "exchange.printSchema()"
+    "exchange.printSchema()\n",
+    "customers.printSchema()"
    ]
   },
   {
@@ -201,6 +203,7 @@
     "\n",
     "- `sales_bronze` ↔ `products_bronze` por `productkey`  \n",
     "- resultado ↔ `stores_bronze` por `storekey`  \n",
+    "- resultado ↔ `customers_bronze` por `customerkey` (com renomeação de colunas para evitar ambiguidade)  \n",
     "- para normalização cambial, join com `exchange_bronze` usando `order_date` e `currency_code`  \n",
     "\n",
     "\n"
@@ -228,20 +231,52 @@
     "df = (\n",
     "    sales.alias(\"s\")\n",
     "         .join(products.alias(\"p\"), col(\"s.productkey\") == col(\"p.productkey\"), \"left\")\n",
-    "         .select(\"s.*\", \"p.category\", \"p.subcategory\", \"p.unit_price_usd\")\n",
+    "         .select(\n",
+    "             \"s.*\",\n",
+    "             \"p.category\",\n",
+    "             \"p.subcategory\",\n",
+    "             \"p.unit_price_usd\",\n",
+    "             \"p.unit_cost_usd\"\n",
+    "         )\n",
     ")\n",
     "\n",
     "# Join com lojas\n",
     "df = (\n",
     "    df.join(stores.alias(\"st\"), df[\"storekey\"] == col(\"st.storekey\"), \"left\")\n",
-    "      .select(df[\"*\"], \"st.country\", \"st.state\", \"st.square_meters\")\n",
+    "      .select(\n",
+    "          df[\"*\"],\n",
+    "          \"st.country\",\n",
+    "          \"st.state\",\n",
+    "          \"st.square_meters\"\n",
+    "      )\n",
+    ")\n",
+    "\n",
+    "# Renomear colunas da dimensão clientes para evitar ambiguidade\n",
+    "customers = customers.select(\n",
+    "    col(\"customerkey\"),\n",
+    "    col(\"gender\").alias(\"cust_gender\"),\n",
+    "    col(\"city\").alias(\"cust_city\"),\n",
+    "    col(\"state\").alias(\"cust_state\"),\n",
+    "    col(\"country\").alias(\"cust_country\"),\n",
+    "    col(\"birthday\").alias(\"cust_birthday\")\n",
+    ")\n",
+    "\n",
+    "# Join com clientes\n",
+    "df = (\n",
+    "    df.join(customers.alias(\"c\"), df[\"customerkey\"] == col(\"c.customerkey\"), \"left\")\n",
+    "      .select(\n",
+    "          df[\"*\"],\n",
+    "          \"c.cust_gender\",\n",
+    "          \"c.cust_city\",\n",
+    "          \"c.cust_state\",\n",
+    "          \"c.cust_country\",\n",
+    "          \"c.cust_birthday\"\n",
+    "      )\n",
     ")\n",
     "\n",
     "# Padronizar formatos de data\n",
     "df = df.withColumn(\"order_date\", to_date(\"order_date\", \"yyyy-MM-dd\"))\n",
-    "exchange = exchange.withColumn(\"date\", to_date(\"date\", \"yyyy-MM-dd\"))\n",
-    "\n",
-    "\n"
+    "exchange = exchange.withColumn(\"date\", to_date(\"date\", \"yyyy-MM-dd\"))\n"
    ]
   },
   {
@@ -262,10 +297,10 @@
    "source": [
     "## 5. Conversão de Moeda para USD\n",
     "\n",
-    "- Unir com `exchange` para obter taxa de câmbio  \n",
+    "- Como vou usar `unit_price_usd` e `unit_cost_usd` em dolar, não preciso de conversão com `exchange` para obter taxa de câmbio  \n",
     "- Remover símbolo de cifrão e converter `unit_price_usd` para double  \n",
-    "- Calcular `total_sales_usd = quantity * unit_price_usd * exchange`  \n",
-    "\n"
+    "- Calcular `total_sales_usd = quantity * unit_price_usd`  \n",
+    "- Calcular `total_cost_usd = quantity * unit_cost_usd`  \n"
    ]
   },
   {
@@ -300,12 +335,21 @@
     "    regexp_replace(\"unit_price_usd\", \"[$,]\", \"\").cast(DoubleType())\n",
     ")\n",
     "\n",
+    "# Limpar unit_cost_usd: remover cifrão e vírgula\n",
+    "df = df.withColumn(\n",
+    "    \"unit_cost_usd\",\n",
+    "    regexp_replace(\"unit_cost_usd\", \"[$,]\", \"\").cast(DoubleType())\n",
+    ")\n",
+    "\n",
     "# Calcular total_sales_usd\n",
     "df = df.withColumn(\n",
     "    \"total_sales_usd\",\n",
-    "    (col(\"quantity\") * col(\"unit_price_usd\") * col(\"e.exchange\")).cast(DoubleType())\n",
-    ")\n",
-    "\n"
+    "    (col(\"quantity\") * col(\"unit_price_usd\")).cast(DoubleType()))\n",
+    "\n",
+    "# Calcular total_cost_usd\n",
+    "df = df.withColumn(\n",
+    "    \"total_cost_usd\",\n",
+    "    (col(\"quantity\") * col(\"unit_cost_usd\")).cast(DoubleType()))"
    ]
   },
   {
@@ -355,7 +399,11 @@
     "df = df.fillna({\n",
     "    \"category\": \"unknown\",\n",
     "    \"subcategory\": \"unknown\",\n",
-    "    \"exchange\": 1.0\n",
+    "    \"exchange\": 1.0,\n",
+    "    \"cust_gender\": \"unknown\",\n",
+    "    \"cust_country\": \"unknown\",\n",
+    "    \"cust_state\": \"unknown\",\n",
+    "    \"cust_city\": \"unknown\"\n",
     "})\n",
     "\n",
     "df = df.withColumn(\"square_meters\", col(\"square_meters\").cast(IntegerType()))\n",
@@ -409,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root\n |-- order_number: integer (nullable = true)\n |-- line_item: integer (nullable = true)\n |-- order_date: date (nullable = true)\n |-- delivery_date: date (nullable = true)\n |-- customerkey: integer (nullable = true)\n |-- storekey: integer (nullable = true)\n |-- productkey: integer (nullable = true)\n |-- quantity: integer (nullable = true)\n |-- category: string (nullable = false)\n |-- subcategory: string (nullable = false)\n |-- unit_price_usd: double (nullable = true)\n |-- country: string (nullable = true)\n |-- state: string (nullable = true)\n |-- square_meters: integer (nullable = true)\n |-- date: date (nullable = true)\n |-- currency: string (nullable = true)\n |-- exchange: double (nullable = false)\n |-- total_sales_usd: double (nullable = true)\n\n+----------+--------------+--------+------------------+\n|order_date|unit_price_usd|quantity|total_sales_usd   |\n+----------+--------------+--------+------------------+\n|2016-01-01|68.0          |1       |94.41120000000001 |\n|2016-01-01|427.0         |2       |854.0             |\n|2016-01-01|665.94        |1       |665.94            |\n|2016-01-01|322.0         |7       |3129.4536000000003|\n|2016-01-01|326.0         |1       |452.6184          |\n|2016-01-01|646.0         |4       |3587.6256000000003|\n|2016-01-01|1592.2        |6       |6440.7674400000005|\n|2016-01-01|255.0         |2       |343.842           |\n|2016-01-01|469.0         |4       |1723.106          |\n|2016-01-01|57.99         |1       |57.99             |\n+----------+--------------+--------+------------------+\nonly showing top 10 rows\n\n"
+      "root\n |-- order_number: integer (nullable = true)\n |-- line_item: integer (nullable = true)\n |-- order_date: date (nullable = true)\n |-- delivery_date: date (nullable = true)\n |-- customerkey: integer (nullable = true)\n |-- storekey: integer (nullable = true)\n |-- productkey: integer (nullable = true)\n |-- quantity: integer (nullable = true)\n |-- category: string (nullable = false)\n |-- subcategory: string (nullable = false)\n |-- unit_price_usd: double (nullable = true)\n |-- unit_cost_usd: double (nullable = true)\n |-- country: string (nullable = true)\n |-- state: string (nullable = true)\n |-- square_meters: integer (nullable = true)\n |-- cust_gender: string (nullable = false)\n |-- cust_city: string (nullable = false)\n |-- cust_state: string (nullable = false)\n |-- cust_country: string (nullable = false)\n |-- cust_birthday: date (nullable = true)\n |-- date: date (nullable = true)\n |-- currency: string (nullable = true)\n |-- exchange: double (nullable = false)\n |-- total_sales_usd: double (nullable = true)\n |-- total_cost_usd: double (nullable = true)\n\n+----------+--------------+--------+---------------+\n|order_date|unit_price_usd|quantity|total_sales_usd|\n+----------+--------------+--------+---------------+\n|2016-01-01|68.0          |1       |68.0           |\n|2016-01-01|427.0         |2       |854.0          |\n|2016-01-01|665.94        |1       |665.94         |\n|2016-01-01|322.0         |7       |2254.0         |\n|2016-01-01|326.0         |1       |326.0          |\n|2016-01-01|646.0         |4       |2584.0         |\n|2016-01-01|1592.2        |6       |9553.2         |\n|2016-01-01|255.0         |2       |510.0          |\n|2016-01-01|469.0         |4       |1876.0         |\n|2016-01-01|57.99         |1       |57.99          |\n+----------+--------------+--------+---------------+\nonly showing top 10 rows\n\n"
      ]
     }
    ],
@@ -479,7 +527,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Out[33]: DataFrame[]"
+      "Out[66]: DataFrame[]"
      ]
     }
    ],
@@ -488,6 +536,7 @@
     "df.write \\\n",
     "  .format(\"delta\") \\\n",
     "  .mode(\"overwrite\") \\\n",
+    "  .option(\"mergeSchema\", \"true\") \\\n",
     "  .save(silver_path)\n",
     "\n",
     "# Criar database e tabela no catálogo SQL\n",
